--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>imericxu.zhiheng.mazegen</groupId>
+    <groupId>imericxu.mazegen</groupId>
     <artifactId>Maze</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -53,9 +53,32 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.4</version>
+                <version>0.0.6</version>
                 <configuration>
+                    <compress>2</compress>
+                    <noHeaderFiles>true</noHeaderFiles>
+                    <stripDebug>true</stripDebug>
+                    <noManPages>true</noManPages>
+                    <launcher>mazefx</launcher>
                     <mainClass>imericxu.mazegen.Main</mainClass>
+                    <jlinkImageName>mazefx</jlinkImageName>
+                    <jlinkZipName>mazefx</jlinkZipName>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <version>1.5.0</version>
+                <configuration>
+                    <name>Mave Generator</name>
+                    <appVersion>1.0.0</appVersion>
+                    <vendor>imericxu</vendor>
+                    <destination>target/dist</destination>
+                    <module>imericxu.mazegen/imericxu.mazegen.Main</module>
+                    <runtimeImage>target/mazefx</runtimeImage>
+                    <javaOptions>
+                        <option>-Dfile.encoding=UTF-8</option>
+                    </javaOptions>
                 </configuration>
             </plugin>
         </plugins>
